Footer y nav Completos
Se tiene uno de las ofertas integradas solo fata ponerle el slide y posicionar el boton de comprar en la imagen de la oferta

--- a/Proyecto/css/css.css
+++ b/Proyecto/css/css.css
@@ -1,99 +1,113 @@
-body {
-    padding-top: 56px;
+* {
+    margin: 0;
+    padding: 0;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
 }
 
 /*change the background color */
 
 .bg-light {
-    background-color: #dc3545 !important;
+    background-color: #c4122f !important;
 }
 
-/*change the navbar-brand color */
-
-.navbar .navbar-brand {
-    color: #f9f7f7;
-}
-
-/*change the ul links color */
-
-.navbar .navbar-nav .nav-link {
-    color: #f9f7f7;
-    border-radius: .25rem;
-    margin: 0 0.25em;
-    padding: 15px;
-    margin: 0 20px 0 20px;
-}
-
-/*adding hover to the links*/
-
-.un-nav a:hover {
-    background: rgba(255, 255, 255, .1);
-}
-
-/*change the background color of the footer */
-
-footer {
-    background-color: #dc3545 !important;
-    text-decoration-line: none;
-    color: #fff;
-}
-
-/*cambio de color de los links del footer*/
-
-footer .btn-link {
-    color: #fff;
-    display: inline;
-}
-
-footer .condciones {
-    font-size: 5px;
-    display: inline;
-}
-
-/**/
-
-/* 
-
-change the background color 
-
-.navbar-light {
-    background-color: rgb(196, 18, 47);
+.fixed-top {
     position: fixed;
+    top: 0;
+    right: 0;
+    left: 0;
+    z-index: 1030;}
+
+    /*change the navbar-brand color */
+    .navbar .navbar-brand {
+        color: #f9f7f7;
+    }
+    /*change the ul links color */
+    .navbar .navbar-nav .nav-link {
+        color: #f9f7f7;
+        border-radius: .25rem;
+        margin: 0 0.25em;
+        padding: 15px;
+        margin: 0 20px 0 20px;
+        
+    }
+    /*adding hover to the links*/
+    .un-nav a:hover {
+        background: rgba(255, 255, 255, .1);
+    }
+
+
+/****************************MAIN*******************************/
+
+main {
+    margin:10% 5% 2% 5%;
 }
 
-/* change the link color */
 
-/*
+#boton {background: red;
+    float: left;
+    position: absolute;
+    }
+img{float: left;}   
 
-li a {
-    color: #fff;
+/****************************FOOTER*********************************/
 
-
-}
-
-/* change the color of active or hovered links */
-
-/*ul li:hover {
-    background-color: #712929;
-}
-*/
-
-/*
-
-.btn-outline-success {
-    background-color: #712929;
-}
-
-/*Oferta*/
-
-/*
+    /*change the background color of the footer */
+    footer {
+        background-color: #c4122f !important;
+        text-decoration-line: none;
+        color: #fff;
+        width: 100%;
+        position: relative;
+        /*esto posiciona el footer simpre al final del documento*/
+        bottom: 0;
+        padding: 5px;
+    }
+    /*cambio de color de los links del footer*/
+    footer .contenedor-links {
+        text-align: center;
+        display: flex;
+        justify-content: center;
+        align-content: center;
+    }
+    footer .btn-link {
+        color: #fff;
+        display: inline;
+    }
+    /*Cambio de color del hover de los links*/
+    footer .btn-link:hover {
+        color: #f9f7f7;
+        border-radius: .25rem;
+        margin: 0 0.25em;
+        text-decoration: none;
+    }
+    footer .condciones {
+        font-size: 5px;
+        color: #000;
+    }
+    /*posicion de los iconos de las redes sociales*/
+    footer .imagen {
+        margin-top: -65px;
+    }
+    /*posicion y estilo de los copyright*/
+    footer .footer-copyright .grupo {
+        margin: -5px;
+        color: #f9f7f7;
+        text-decoration: none;
+        display: inline;
+        text-align: center;
+        justify-content: center;
+    }
+    
+    /*Oferta*/
+    /*
 .oferta {
     height: 44.625em;
     width: 19.75em;
 }
 */
-
-/*
+    /*
 footer {
     background-color: rgb(196, 18, 47);
     height: 60px;
