--- a/Proyecto/css/css.css
+++ b/Proyecto/css/css.css
@@ -30,7 +30,7 @@
         margin: 0 0.25em;
         padding: 15px;
         margin: 0 20px 0 20px;
-        
+
     }
     /*adding hover to the links*/
     .un-nav a:hover {
@@ -49,7 +49,7 @@ main {
     float: left;
     position: absolute;
     }
-img{float: left;}   
+img{float: left;}
 
 /****************************FOOTER*********************************/
 
@@ -99,7 +99,14 @@ img{float: left;}
         text-align: center;
         justify-content: center;
     }
-    
+
+    iframe{
+      border: none;
+      width: 100%;
+      height: 100%;
+      /* scroll-behavior: none; */
+    }
+
     /*Oferta*/
     /*
 .oferta {
