--- a/Proyecto/css/css.css
+++ b/Proyecto/css/css.css
@@ -32,6 +32,7 @@
         margin: 0 20px 0 20px;
 
     }
+
     /*adding hover to the links*/
     .un-nav a:hover {
         background: rgba(255, 255, 255, .1);
@@ -99,13 +100,32 @@ img{float: left;}
         text-align: center;
         justify-content: center;
     }
+.subtitulo{
+  margin-top: 5px;
+  padding: 5px 5px 5px;
+  color: white;
+  background-color: #c4122f;
+}
+hr{
+  margin-top: -9px;
+  background-color: #c4122f;
+  height: 5px;
+}
 
-    iframe{
+.menu_thumb{
+  height: 200px;
+  width: 200px;
+  justify-content:space-around;
+}
+
+
+/*EN CASO DE USARSE IFRAME PARA EL FOOTER Y EVITAR  REESCRIBIRLO*/
+    /* iframe{
       border: none;
       width: 100%;
       height: 100%;
       /* scroll-behavior: none; */
-    }
+    } */
 
     /*Oferta*/
     /*
