--- a/Proyecto/css/css.css
+++ b/Proyecto/css/css.css
@@ -17,124 +17,179 @@
     top: 0;
     right: 0;
     left: 0;
-    z-index: 1030;}
+    z-index: 1030;
+}
 
-    /*change the navbar-brand color */
-    .navbar .navbar-brand {
-        color: #f9f7f7;
-    }
-    /*change the ul links color */
-    .navbar .navbar-nav .nav-link {
-        color: #f9f7f7;
-        border-radius: .25rem;
-        margin: 0 0.25em;
-        padding: 15px;
-        margin: 0 20px 0 20px;
+/*change the navbar-brand color */
+.navbar .navbar-brand {
+    color: #f9f7f7;
+}
 
-    }
+/*change the ul links color */
+.navbar .navbar-nav .nav-link {
+    color: #f9f7f7;
+    border-radius: .25rem;
+    margin: 0 0.25em;
+    padding: 15px;
+    margin: 0 20px 0 20px;
 
-    /*adding hover to the links*/
-    .un-nav a:hover {
-        background: rgba(255, 255, 255, .1);
-    }
+}
+
+/*adding hover to the links*/
+.un-nav a:hover {
+    background: rgba(255, 255, 255, .1);
+}
 
 
 /****************************MAIN*******************************/
 
 main {
-    margin:10% 5% 2% 5%;
+    margin: 10% 5% 2% 5%;
 }
 
 
-#boton {background: red;
+
+
+img {
     float: left;
-    position: absolute;
-    }
-img{float: left;}
+}
 
 /****************************FOOTER*********************************/
 
-    /*change the background color of the footer */
-    footer {
-        background-color: #c4122f !important;
-        text-decoration-line: none;
-        color: #fff;
-        width: 100%;
-        position: relative;
-        /*esto posiciona el footer simpre al final del documento*/
-        bottom: 0;
-        padding: 5px;
-    }
-    /*cambio de color de los links del footer*/
-    footer .contenedor-links {
-        text-align: center;
-        display: flex;
-        justify-content: center;
-        align-content: center;
-    }
-    footer .btn-link {
-        color: #fff;
-        display: inline;
-    }
-    /*Cambio de color del hover de los links*/
-    footer .btn-link:hover {
-        color: #f9f7f7;
-        border-radius: .25rem;
-        margin: 0 0.25em;
-        text-decoration: none;
-    }
-    footer .condciones {
-        font-size: 5px;
-        color: #000;
-    }
-    /*posicion de los iconos de las redes sociales*/
-    footer .imagen {
-        margin-top: -65px;
-    }
-    /*posicion y estilo de los copyright*/
-    footer .footer-copyright .grupo {
-        margin: -5px;
-        color: #f9f7f7;
-        text-decoration: none;
-        display: inline;
-        text-align: center;
-        justify-content: center;
-    }
-.subtitulo{
-  margin-top: 5px;
-  padding: 5px 5px 5px;
-  color: white;
-  background-color: #c4122f;
-}
-hr{
-  margin-top: -9px;
-  background-color: #c4122f;
-  height: 5px;
+/*change the background color of the footer */
+footer {
+    background-color: #c4122f !important;
+    text-decoration-line: none;
+    color: #fff;
+    width: 100%;
+    position: relative;
+    /*esto posiciona el footer simpre al final del documento*/
+    bottom: 0;
+    padding: 5px;
 }
 
-.menu_thumb{
-  height: 200px;
-  width: 200px;
-  justify-content:space-around;
+/*cambio de color de los links del footer*/
+footer .contenedor-links {
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-content: center;
 }
+
+footer .btn-link {
+    color: #fff;
+    display: inline;
+}
+
+/*Cambio de color del hover de los links*/
+footer .btn-link:hover {
+    color: #f9f7f7;
+    border-radius: .25rem;
+    margin: 0 0.25em;
+    text-decoration: none;
+}
+
+footer .condciones {
+    font-size: 5px;
+    color: #000;
+}
+
+/*posicion de los iconos de las redes sociales*/
+
+footer .imagen-i {
+    margin-right: 6%;
+}
+
+/*posicion y estilo de los copyright*/
+footer .footer-copyright .grupo {
+    margin: -5px;
+    color: #f9f7f7;
+    text-decoration: none;
+    display: inline;
+    text-align: center;
+    justify-content: center;
+}
+
+/******************MENU*********************/
+.subtitulo {
+    margin-top: 5px;
+    padding: 2px 10px 2px;
+    color: white;
+    background-color: #c4122f;
+}
+
+hr {
+    margin-top: -8px;
+    background-color: #c4122f;
+    height: 8px;
+}
+
+.menu_thumb {
+    height: 200px;
+    width: 200px;
+    justify-content: space-around;
+    display: block;
+}
+
+/*******************************************************/
+.caja {
+    position: relative;
+    width: 50%;
+}
+
+.image {
+    display: block;
+    width: 100%;
+    height: auto;
+}
+
+.overlay {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: 100%;
+    width: 100%;
+    opacity: 0;
+    transition: .5s ease;
+    background-color: #326b32;
+}
+
+.caja:hover .overlay {
+    opacity: 1;
+}
+
+.text {
+    color: white;
+    font-size: 12px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    text-align: center;
+}
+
 
 
 /*EN CASO DE USARSE IFRAME PARA EL FOOTER Y EVITAR  REESCRIBIRLO*/
-    /* iframe{
+/* iframe{
       border: none;
       width: 100%;
       height: 100%;
       /* scroll-behavior: none; */
-    } */
+/* } */
 
-    /*Oferta*/
-    /*
+/*Oferta*/
+/*
 .oferta {
     height: 44.625em;
     width: 19.75em;
 }
 */
-    /*
+/*
 footer {
     background-color: rgb(196, 18, 47);
     height: 60px;
