--- a/Proyecto/css/css.css
+++ b/Proyecto/css/css.css
@@ -196,12 +196,12 @@ hr {
 /****************************OFERTAS  cajas*****************************************/
 .carta {
     opacity: 1;
-    display:block;
+    display: block;
     width: 100%;
     height: auto;
     transition: .5s ease;
     backface-visibility: hidden;
-    
+
 }
 
 .medio {
@@ -236,7 +236,56 @@ hr {
 
 }
 
-/*********************************************************************/
+
+/*****************Ordenar******************/
+
+
+.shrink{
+	opacity:0.9;
+	
+}
+.shrink:hover
+{       
+        -webkit-transform: scale(.5);
+        -ms-transform: scale(1);
+        transform: scale(0.8);
+        opacity:2;
+
+}
+
+/* Place text in the middle of the image */
+.hero-text {
+  text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: white;
+ 
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 /*EN CASO DE USARSE IFRAME PARA EL FOOTER Y EVITAR  REESCRIBIRLO*/
